--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,4 +36,20 @@
   100% {
     transform: translateY(0px);
   }
+}
+h2{
+  margin: 0;
+}
+h3{
+  margin: 0;
+}
+h4{
+  margin: 0;
+}
+p{
+  margin: 0;
+}
+.linkStyle{
+  text-decoration: none;
+  color: aliceblue;
 }
