--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -1,4 +1,5 @@
 .cardlayout{
+    margin: 10px;
     width: 350px;
     height: 180px;
     border: 1px solid black;
@@ -33,4 +34,12 @@
     border: 1px solid darkcyan;
     display: flex;
     justify-content: space-between;
+}
+.deleteBtn{
+    height: 30px;
+    width: 80px;
+    background-color: black;
+    color: aliceblue;
+    font-size: 20px;
+    border-radius: 8px;
 }
