--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -1,8 +1,9 @@
 .cardlayout{
     margin: 10px;
+    padding: 5px;
     width: 350px;
     height: 180px;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -12,28 +13,28 @@
     transform: scale(1.1);
 }
 .cardOver{
-    border: 1px solid green;
     display: flex;
     justify-content: space-between;
     padding: 0 5px;
 }
 .cardMiddle{
-    border: 1px solid blue;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 .cardUnder{
-    border: 1px solid red;
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
     padding: 10px;
 }
-.icons{
-    width: 90%;
-    border: 1px solid darkcyan;
-    display: flex;
-    justify-content: space-between;
+.grow{
+    font-size: 25px;
+    flex-grow: 1.3;
+}
+.minitext{
+    font-size: 12px;
 }
 .deleteBtn{
     height: 30px;
