--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -1,17 +1,50 @@
 .cardlayout{
     margin: 10px;
     padding: 5px;
-    width: 350px;
-    height: 180px;
+    width: 330px;
+    height: 170px;
     border: 2px solid black;
-    border-radius: 10px;
+    border-radius: 6px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 .cardlayout:hover{
     transform: scale(1.1);
 }
+.noStyle{
+    background-color: transparent;
+    border: none;
+    height: 100%;
+    width: 100%;
+}
+.hovertext {
+    position: relative;
+  }
+  
+  .hovertext:before {
+    content: attr(data-hover);
+    visibility: hidden;
+    opacity: 0;
+    width: 100px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px 0;
+    transition: opacity 1s ease-in-out;
+  
+    position: absolute;
+    z-index: 1;
+    left: 35%;
+    top: 50%;
+  }
+  
+  .hovertext:hover:before {
+    opacity: 1;
+    visibility: visible;
+  }
 .cardOver{
     display: flex;
     justify-content: space-between;
